# get-scenic-boundary

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  pyproject.toml  requirements-full.txt  requirements.txt
docs/: coordinate_systems.md  data_sources.md
examples/: coord_transform_demo.py  custom_batch.py  scenic_areas_pipeline.py
geoboundary/: __init__.py  cli.py  config.py  coord_transform.py  core.py  export.py  geometry.py
geoboundary/sources/: __init__.py  amap.py  baidu.py  nominatim.py  osm.py
release/: report.txt  scenic_areas_metadata.csv
scripts/: convert_coords.py  query_batch.py  query_single.py
skill/: SKILL.md
tests/: test_coord_transform.py  test_export.py  test_geometry.py
